# vibe-crypto-wallet

./: Cargo.toml  README.md
.agent/skills/vibe_wallet/: SKILL.md
wallet-core/: Cargo.toml
wallet-core/src/: application.rs  domain.rs  infrastructure.rs  lib.rs
wallet-core/src/application/: wallet_service.rs
wallet-core/src/domain/: chain.rs  crypto.rs  wallet.rs
wallet-core/src/infrastructure/: bip39_adapter.rs  crypto_adapter.rs  ur_adapter.rs
wallet-ffi/: Cargo.toml
wallet-ffi/src/: lib.rs
wallet-tui/: Cargo.toml
wallet-tui/src/: main.rs
