[package]
name = "wallet-core"
version = "0.1.0"
edition = "2021"

[dependencies]
tiny-bip39 = "1.0.0"
k256 = { version = "0.13.1", features = ["ecdsa", "sha256"] }
ed25519-dalek = { version = "2.1.1", features = ["rand_core"] }
bs58 = "0.5.0"
sha3 = "0.10.8"
hex = "0.4.3"
ur = "0.4.0"
rlp = "0.5"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
rand = "0.8"
hmac = "0.12"
sha2 = "0.10"
pbkdf2 = "0.12"
getrandom = { version = "0.2", features = [
    "js",
] } # Useful if we ever target WASM, but good for rand
anyhow = "1.0.102"
